Fixing Header and BrandsLogo overlapping problem

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
@@ -46,6 +46,9 @@
 header {
   position: sticky;
   top: 0;
+  background-color: #f9f9f9;
+  z-index: 100;
+
 }
 /*End Nav*/
 
@@ -198,11 +201,11 @@ select option {
   margin-top: 50px;
   gap: 10px;
 }
-.brands-logo img {
+.brands-logo li a img {
   filter: grayscale(100%);
 }
 .brands-logo img:hover {
-  filter: grayscale(0%);
+  filter: none;
   transition: 0.5s;
 }
 
